#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([netool], [1.0.0], [songyancui@gmail.com])
AC_CONFIG_SRCDIR([src/main.c])

AM_INIT_AUTOMAKE(netool,1.0.0)
# Checks for programs.
AC_PROG_CC  # Checks for l
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile
                   src/Makefile])

AC_OUTPUT

